--- a/assets/css/otherstyle.css
+++ b/assets/css/otherstyle.css
@@ -50,12 +50,12 @@ html,body {
 }
 
 h1{
-	font-size: 10em;
+	font-size: 80px;
 	color: #F720A8;
 }
 
 .lead{
-	font-size: 3em;
+	font-size: 25px;
 	color: #F720A8;
 }
 
